// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemoContainer /> Shallow rendering should render foreign memo  1`] = `
<MemoComponent
  closeModal={[Function]}
  memo={
    Object {
      "$action": 0,
      "$meta": Object {
        "userId": "c56d7036d14071f7c2f16a64ea71fcdd41c90e9f2691de406e1847065267679f",
      },
      "$rev": 1,
      "$scope": "b626a31be85752ee925a8d1aacf6a89d1cf7ec6b3e70824ce142c2f679cfe820",
      "$scopeId": "aaVVBvinX2fNzbia3LxqKYaWD4JYta71Da",
      "$type": "memo",
      "createdAt": "2019-08-29T07:33:44.530Z",
      "message": "Lorem quia est odio nemo.",
    }
  }
  onLoadReplies={[Function]}
  onModalOpenClicked={[Function]}
  showDelete={false}
/>
`;

exports[`<MemoContainer /> Shallow rendering should render memo with replies 1`] = `
<MemoComponent
  closeModal={[Function]}
  memo={
    Object {
      "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg",
      "idx": 1,
      "memoDatetime": "2018-07-26T16:44:56.000Z",
      "memoLikesCount": 1,
      "memoRepliesCount": 0,
      "memoText": "Suscipit vel nobis.",
      "memoTipTotal": 0,
      "replyIds": Array [
        "[bob][1]",
      ],
      "username": "alice",
    }
  }
  onLoadReplies={[Function]}
  onModalOpenClicked={[Function]}
  replies={
    Array [
      Object {
        "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/rangafangs/128.jpg",
        "idx": 1,
        "memoDatetime": "2018-07-26T16:45:08.218Z",
        "memoLikesCount": 0,
        "memoRepliesCount": 0,
        "memoText": "Qui magnam maiores laboriosam animi sit aut.",
        "memoTipTotal": 0,
        "username": "bob",
      },
    ]
  }
  showDelete={true}
  showReplies={true}
/>
`;

exports[`<MemoContainer /> Shallow rendering should render memo without replies 1`] = `
<MemoComponent
  closeModal={[Function]}
  memo={
    Object {
      "$action": 0,
      "$meta": Object {
        "userId": "d4a093ed4e56c8c2411281d829715d9ab552c0bb762065c9ca1d96d3fd07866d",
      },
      "$rev": 1,
      "$scope": "b626a31be85752ee925a8d1aacf6a89d1cf7ec6b3e70824ce142c2f679cfe820",
      "$scopeId": "yPyxJ3ppBYhMWgCGrLXPGtEhfbAG6XP6WL",
      "$type": "memo",
      "createdAt": "2019-08-29T07:32:26.641Z",
      "message": "Qui magnam maiores laboriosam animi sit aut.",
    }
  }
  onLoadReplies={[Function]}
  onModalOpenClicked={[Function]}
  showDelete={false}
/>
`;

exports[`<MemoContainer /> Shallow rendering should render non existing memo  1`] = `
<MemoComponent
  closeModal={[Function]}
  memoNotAvailable={true}
  onLoadReplies={[Function]}
  onModalOpenClicked={[Function]}
/>
`;

exports[`<MemoContainer /> Shallow rendering should render without crashing 1`] = `
<MemoComponent
  closeModal={[Function]}
  memoNotAvailable={true}
  onLoadReplies={[Function]}
  onModalOpenClicked={[Function]}
/>
`;
